WebCore:

2008-05-05  David Hyatt  <hyatt@apple.com>

        Fix for https://bugs.webkit.org/show_bug.cgi?id=18821.  Fix some bugs in both get/PutImageData of <canvas>.

        Reviewed by Eric

        New tests added in fast/canvas/

        * platform/graphics/cg/ImageBufferCG.cpp:
        (WebCore::ImageBuffer::getImageData):
        (WebCore::ImageBuffer::putImageData):

LayoutTests:

2008-05-05  David Hyatt  <hyatt@apple.com>

        Fix for https://bugs.webkit.org/show_bug.cgi?id=18821, putImageData incorrect when data has alpha.

        Reviewed by Eric

        * fast/canvas/canvas-alphaImageData-behavior-expected.txt: Added.
        * fast/canvas/canvas-alphaImageData-behavior.html: Added.
        * fast/canvas/canvas-alphaImageData-behavior.js: Added.



Canonical link: https://commits.webkit.org/26095@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@32878 268f45cc-cd09-0410-ab3c-d52691b4dbfc